<resources>
    <string name="app_name">Discreet Launcher</string>
    <string name="author">Vincent Falzon</string>
    <string name="licence_name">GNU General Public License v3.0</string>
    <string name="license_link">https://gnu.org/licenses/gpl-3.0.txt</string>
    <string name="website_description">Suggest improvements, report issues, and support the project on</string>
    <string name="website_link">https://vincent-falzon.com</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="privacy_policy_link">https://vincent-falzon.com/privacy-policy-discreet-launcher.html</string>
    <string name="translation_credit"></string>
    <string name="menu">Menu</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_folders">Folders</string>
    <string name="menu_hidden_apps">Hidden apps</string>
    <string name="menu_refresh_list_apps">Refresh the list of apps</string>
    <string name="menu_settings_appearance">Appearance</string>
    <string name="menu_settings_operation">Operation</string>
    <string name="menu_export_import">Export and import</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_changelog">Changelog</string>
    <string name="long_click_dialog_title">What do you want to do?</string>
    <string name="long_click_open">Open \"%1$s\"</string>
    <string name="long_click_settings">Access its settings</string>
    <string name="long_click_view_store">View store page</string>
    <string name="long_click_rename">Rename</string>
    <string name="long_click_add_favorites">Add to favorites</string>
    <string name="long_click_remove_favorites">Remove from favorites</string>
    <string name="long_click_add_folder">Add to a folder</string>
    <string name="long_click_remove_folder">Remove from folder \"%1$s\"</string>
    <string name="long_click_hide_search">Hide</string>
    <string name="long_click_remove_shortcut">Remove this shortcut</string>
    <string name="button_apply">Apply</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="info_list_apps_refreshed">List of apps refreshed</string>
    <string name="info_favorites_refreshed">Favorites refreshed</string>
    <string name="info_display_partially_updated">The display will be fully updated after returning to the home screen</string>
    <string name="error_app_not_found">Could not find \"%1$s\"</string>
    <string name="button_select_favorites">Select favorites</string>
    <string name="button_sort">Sort</string>
    <string name="hint_no_favorites_yet">Add your favorite apps here\nby clicking the menu button.</string>
    <string name="hint_modify_order_of_favorites">Modify the order of favorites below.</string>
    <string name="warning_sort_favorites_alphabetically">The current order of favorites will be replaced by alphabetical order.</string>
    <string name="favorite_move_before">Move before \"%1$s\"</string>
    <string name="favorite_move_after">Move after \"%1$s\"</string>
    <string name="button_new_folder">Add</string>
    <string name="button_remove_folder">Remove</string>
    <string name="hint_folder_edit">Click on a folder name to change it, and on the icon to choose its color. The pen allows editing folder content.</string>
    <string name="hint_new_folder">New folder</string>
    <string name="hint_rename_folder">Rename folder</string>
    <string name="hint_remove_folder">Removing a folder puts its content back into the main app list.</string>
    <string name="error_folder_empty_name">Pick a name first</string>
    <string name="error_folder_already_exists">Pick a name that doesn\'t exist already</string>
    <string name="error_folder_rename">Could not rename the folder</string>
    <string name="search_app_name">Search</string>
    <string name="search_app_hint">Search for apps</string>
    <string name="export_import_help">These buttons allow exporting the app data (favorites, folders, shortcuts and settings) or importing them again.</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="export_import_header_internal_files">Content of internal text files</string>
    <string name="export_import_header_settings">Settings</string>
    <string name="export_import_header_icons">Saved icons</string>
    <string name="export_import_warning_file_edit">Editing this file may cause problems</string>
    <string name="export_import_warning_shortcuts">(On Android 8 (Oreo) and beyond, imported shortcuts may not work because they are managed by the system and are not supposed to be exported)</string>
    <string name="export_completed">Export completed</string>
    <string name="error_export">Could not create export file</string>
    <string name="error_import">Could not read the import file</string>
    <string name="error_shortcut_invalid_request">Could not add that as a shortcut</string>
    <string name="error_shortcut_missing_info">Could not follow this shortcut</string>
    <string name="error_shortcut_not_default_launcher">Only the default launcher can open shortcuts</string>
    <string name="error_shortcut_start">The Android system could not open the shortcut</string>
    <string name="error_shortcut_remove">Could not delete the %1$s file</string>
    <string name="appearance_settings_title_interface">Interface</string>
    <string name="appearance_settings_title_clock">Clock</string>
    <string name="appearance_settings_title_icon_packs">Icon packs</string>
    <string name="color_picker_base">Base:</string>
    <string name="color_picker_reset">Reset</string>
    <string name="color_picker_preview">Preview</string>
    <string name="error_invalid_color_format">Invalid hexadecimal color</string>
    <string name="set_application_theme">Theme</string>
    <string-array name="set_application_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System preference</item>
    </string-array>
    <string name="set_clock_format">Format</string>
    <string-array name="set_clock_format_entries">
        <item>None (hide)</item>
        <item>24 hours</item>
        <item>12 hours</item>
        <item>12 hours + AM/PM</item>
        <item>Analog</item>
        <item>Date and time</item>
        <item>Full date and time</item>
        <item>Date without time</item>
        <item>Full date without time</item>
    </string-array>
    <string name="set_clock_position">Position</string>
    <string-array name="set_clock_position_entries">
        <item>Top</item>
        <item>"Top  —  Left"</item>
        <item>"Top  —  Right"</item>
        <item>Middle</item>
        <item>"Middle  —  Left"</item>
        <item>"Middle  —  Right"</item>
        <item>Bottom</item>
        <item>"Bottom  —  Left"</item>
        <item>"Bottom  —  Right"</item>
    </string-array>
    <string name="set_clock_size">Size</string>
    <string-array name="set_clock_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="set_transparent_status_bar">Transparent status bar</string>
    <string name="set_transparent_status_bar_help">When favorites are closed</string>
    <string name="set_dark_status_bar_icons">Dark status bar icons</string>
    <string name="set_dark_status_bar_icons_help">Not working on Android 5 (Lollipop)</string>
    <string name="set_icon_size_dp">Icon size</string>
    <string name="set_hide_app_names">No app names</string>
    <string name="set_hide_folder_names">No folder names</string>
    <string name="set_remove_padding">No padding when app names are hidden</string>
    <string name="set_background_color_favorites">Favorites background</string>
    <string name="set_text_color_favorites">Favorites text</string>
    <string name="set_background_color_drawer">App drawer background</string>
    <string name="set_text_color_drawer">App drawer text</string>
    <string name="set_background_color_folders">Folders background</string>
    <string name="set_text_color_folders">Folders text</string>
    <string name="set_clock_color">Color</string>
    <string name="set_clock_shadow_color">Text shadow color</string>
    <string name="set_icon_pack_primary">Primary</string>
    <string name="set_icon_pack_secondary">Secondary</string>
    <string name="set_icon_pack_none">None (use default icons)</string>
    <string name="set_icon_color_filter">Color filter on icons</string>
    <string name="set_icon_color_filter_help">Only applies to default icons, can be used in addition to icon packs</string>
    <string name="error_no_icon_pack_installed">Install some from your app store first</string>
    <string name="error_icon_pack_appfilter_not_found">Could not find appfilter.xml in the selected icon pack. (%1$s)</string>
    <string name="operation_settings_title_interface">Interface</string>
    <string name="operation_settings_title_gestures">Home screen gestures</string>
    <string name="set_notification">Notification for access to favorites</string>
    <string name="set_notification_help">Uses a transparent icon</string>
    <string name="set_notification_warning_disabled">Notifications are disabled by system settings</string>
    <string name="notification_text">Favorites</string>
    <string name="set_forced_orientation">Forced orientation</string>
    <string-array name="set_forced_orientation_entries">
        <item>None</item>
        <item>Portrait</item>
        <item>Landscape</item>
        <item>Reverse landscape</item>
    </string-array>
    <string name="set_touch_targets">Touch targets (accessibility)</string>
    <string name="set_touch_targets_help">Clickable labels on the home screen</string>
    <string name="target_open_favorites">Open\nfavorites</string>
    <string name="target_close_favorites">Close\nfavorites</string>
    <string name="target_open_apps">Open\napps</string>
    <string name="target_close_apps">Close\napps</string>
    <string name="help_touch_targets">Swipe down to display the menu button, you can enable touch targets in the Operation menu</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_always_show_favorites">Always show favorites</string>
    <string name="set_reverse_interface">Reversed interface</string>
    <string name="set_reverse_interface_help">Apps above, and favorites below the home screen</string>
    <string name="help_navigation_title">Navigation</string>
    <string name="help_navigation">Swipe up from the home screen to show all apps, and downwards to go back.\n\nSwipe down from the home screen to show favorites, and upwards to go back.\n\nClick the menu button (when showing favorites) or the launcher icon to open the menu.\n\nLong-hold an app or folder to access its settings.</string>
    <string name="help_notification_title">Notification</string>
    <string name="help_notification">Shows a popup of favorites above other apps when you leave the home screen.</string>
    <string name="help_list_update_title">List update</string>
    <string name="help_list_update">A popup message is shown when refreshing the app list and icons, when starting, adding or removing apps, or if the icon pack is modified.</string>
    <string name="help_folders_title">Folders</string>
    <string name="help_folders">Manage folders or favorite them from the menu button, or click the title of an open folder to create, rename, and put apps in it.\nRemoving folders puts all apps in them back in the main list.</string>
    <string name="help_search_title">Search</string>
    <string name="help_search">Find any app from the search icon. It can also be favorited to be available from the notification, or hidden.\n\nPressing \"Enter\" opens the first search result.</string>
</resources>