<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/help_navigation_title"
            style="@style/Help_SectionTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/help_navigation"/>

        <TextView
            android:text="@string/help_notification_title"
            style="@style/Help_SectionTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/help_notification"/>

        <TextView
            android:text="@string/help_list_update_title"
            style="@style/Help_SectionTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/help_list_update"/>

        <TextView
            android:text="@string/help_folders_title"
            style="@style/Help_SectionTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/help_folders"/>

        <TextView
            android:text="@string/help_search_title"
            style="@style/Help_SectionTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/help_search"/>

    </LinearLayout>

</ScrollView>