<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/appearance_settings_title_theme_and_colors"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="application_theme"
            app:title="@string/set_application_theme"
            app:iconSpaceReserved="false"
            app:entries="@array/set_application_theme_entries"
            app:entryValues="@array/set_application_theme_values"
            app:defaultValue="none"
            app:useSimpleSummaryProvider="true"/>

        <!-- Splitted between favorites and drawer (v5.2.0), to remove later -->
        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="background_color"
            app:defaultValue="#66000000"
            app:isPreferenceVisible="false"/>

        <SwitchPreference
            app:key="transparent_status_bar"
            app:title="@string/set_transparent_status_bar"
            app:summary="@string/set_transparent_status_bar_help"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <SwitchPreference
            app:key="dark_status_bar_icons"
            app:title="@string/set_dark_status_bar_icons"
            app:summary="@string/set_dark_status_bar_icons_help"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="background_color_favorites"
            app:title="@string/set_background_color_favorites"
            app:defaultValue="#66000000"
            app:iconSpaceReserved="false"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="text_color_favorites"
            app:title="@string/set_text_color_favorites"
            app:defaultValue="#FFFFFFFF"
            app:iconSpaceReserved="false"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="background_color_drawer"
            app:title="@string/set_background_color_drawer"
            app:defaultValue="#66000000"
            app:iconSpaceReserved="false"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="text_color_drawer"
            app:title="@string/set_text_color_drawer"
            app:defaultValue="#FFFFFFFF"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/appearance_settings_title_clock"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="clock_format"
            app:title="@string/set_clock_format"
            app:iconSpaceReserved="false"
            app:entries="@array/set_clock_format_entries"
            app:entryValues="@array/set_clock_format_values"
            app:defaultValue="none"
            app:useSimpleSummaryProvider="true"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="clock_color"
            app:title="@string/set_clock_color"
            app:defaultValue="#FFFFFFFF"
            app:iconSpaceReserved="false"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="clock_shadow_color"
            app:title="@string/set_clock_shadow_color"
            app:defaultValue="#66000000"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:key="clock_position"
            app:title="@string/set_clock_position"
            app:iconSpaceReserved="false"
            app:entries="@array/set_clock_position_entries"
            app:entryValues="@array/set_clock_position_values"
            app:defaultValue="top"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/appearance_settings_title_applications"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="icon_pack"
            app:title="@string/set_icon_pack"
            app:iconSpaceReserved="false"
            app:defaultValue="none"
            app:useSimpleSummaryProvider="true"/>

        <com.vincent_falzon.discreetlauncher.settings.ColorPickerPreference
            app:key="icon_color_tint"
            app:title="@string/set_icon_color_tint"
            app:defaultValue="#00000000"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            app:key="hide_app_names"
            app:title="@string/set_hide_app_names"
            app:summary="@string/set_hide_app_names_help"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <SwitchPreference
            app:key="remove_padding"
            app:title="@string/set_remove_padding"
            app:summary="@string/set_remove_padding_help"
            app:dependency="hide_app_names"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
