<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_normal"
    android:paddingHorizontal="@dimen/spacing_normal"
    android:gravity="center">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:text="@string/app_version"/>

    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/author"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/translation_credit"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/licence_name"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:autoLink="web"
        android:text="@string/license_link"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"
        android:text="@string/website_description"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:autoLink="web"
        android:text="@string/website_link"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/privacy_policy_description"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:autoLink="web"
        android:text="@string/privacy_policy_link"/>

</LinearLayout>