<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ActivityExportImport"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:padding="@dimen/spacing_large"
	android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_import_help"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_export"
            android:theme="@style/NormalButton"
            style="?android:buttonStyle"/>

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_import"
            android:theme="@style/BorderlessButton"
            style="?android:borderlessButtonStyle"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/export_import_warning_shortcuts"/>

</LinearLayout>