<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/spacing_large"
    android:orientation="horizontal"
    android:gravity="center">

    <ImageButton
        android:id="@+id/edit_folder_color"
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:layout_marginHorizontal="@dimen/spacing_very_small"
        android:background="@color/for_overlay"
        android:contentDescription="@string/color_picker_preview"/>

    <TextView
        android:id="@+id/edit_folder_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:text="@string/placeholder"/>

    <ImageButton
        android:id="@+id/edit_folder_content"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/export_import_header_settings"/>

    <ImageButton
        android:id="@+id/remove_folder"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/button_remove_folder"/>

</LinearLayout>